fix: horizontalScroll size on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@ body {
 
 .right-arrow,
 .left-arrow {
-  padding: 0 12px;
   cursor: pointer;
   background: transparent;
   outline: none;
@@ -58,7 +57,7 @@ body {
   justify-content: center;
   align-items: center;
   color: #d40000;
-  font-size: 32px;
+  font-size: 28px;
   transform: scale(1, 1);
   transition: 0.3s all ease-in-out;
 }
